--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-    <title>Scientific Calculator</title>
+    <title>Scientific Calculator by SHYAKA Aime</title>
 
 </head>
 
 <body>
-
+    <div class="heading" style="text-align:center;font-family: 'Poppins';" ><h3>S.Aime Calc</h3></div>
     <div class="calculator">
         <div class="calc-container">
 
