--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="heading" style="text-align:center;font-family: 'Poppins';" ><h3>S.Aime Calc</h3></div>
+    <div class="heading" style="text-align:center;font-family: 'Poppins';margin-top:2%;" ><h2>S.Aime Calc</h2></div>
     <div class="calculator">
         <div class="calc-container">
 
