--- a/static/style.css
+++ b/static/style.css
@@ -99,9 +99,12 @@ html {
     background-color: #46e0bc;
     width: 121px;
     border-radius: 50px;
-    border:none;
+
 }
 
+.row #calculate:hover {
+    border:none;
+}
 .row #delete {
     color: #FFF;
     background-color: #e05046;
