--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,12 @@ html {
     border:none;
     outline:none;
 }
+
+.row #calculate:focus{
+    border:none;
+    outline:none;
+}
+
 .row #delete {
     color: #FFF;
     background-color: #e05046;
@@ -115,6 +121,12 @@ html {
      border:none;
     outline:none;
 }
+
+.row #delete:focus{
+     border:none;
+    outline:none;
+}
+
 
 #division,
 #multiplication,
@@ -127,9 +139,14 @@ html {
     font-size: 0.6em;
     position: absolute;
 }
-
 .active-angle {
     background-color: #1d1d1d !important;
     color: #FFF !important;
     border-radius: 10px !important;
+}
+
+
+.active-angle:focus {
+    border:none;
+    outline:none;
 }
