--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="heading" style="text-align:center;font-family: 'Poppins';margin-top:5px;" ><h2>S.Aime Calc</h2></div>
+    <div class="heading" style="text-align:center;font-family: 'Poppins';margin-top:5px;" ><h2>SHYAKA Aime Calc.</h2></div>
     <div class="calculator">
         <div class="calc-container">
 
@@ -40,6 +40,12 @@
             </div>
         </div>
     </div>
+    
+    <footer>
+        <div class="end">
+           <p style="text-align:center;font-family: 'Poppins';"> <b>Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;>SHYAKA Aime</a></b></p>
+        </div>
+    </footer>
 
     <script src="/static/index.js"></script>
 </body>
