--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
         </div>
     </div>
     
-    <footer>
+    <footer style="margin-top:100%">
         <div class="end">
-           <p style="text-align:center;font-family: 'Poppins';"> <b>Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;>SHYAKA Aime</a></b></p>
+           <p style="text-align:center;font-family: 'Poppins';">Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;>SHYAKA Aime</a></p>
         </div>
     </footer>
 
