--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="heading" style="text-align:center;font-family: 'Poppins';margin-top:5px;" ><h2>SHYAKA Aime Calc.</h2></div>
+    <div class="heading" style="text-align:center;font-family: 'Poppins';margin-top:5px;" > <h2><a href="https://aime-blog.netlify.app/" style="color:#000;">SHYAKA Aime</a> Calc.</h2></div>
     <div class="calculator">
         <div class="calc-container">
 
@@ -43,7 +43,7 @@
     
    <!-- <footer style="margin-top:100%">
         <div class="end">
-           <p style="text-align:center;font-family: 'Poppins';">Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;>SHYAKA Aime</a></p>
+           <p style="text-align:center;font-family: 'Poppins';">Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;">SHYAKA Aime</a></p>
         </div>
     </footer>-->
 
