--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     
-<footer style="margin-top:100%">
+<footer style="margin-top:;">
         <div class="end">
            <p style="text-align:center;font-family: 'Poppins';">Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;">SHYAKA Aime</a></p>
         </div>
