--- a/templates/index.html
+++ b/templates/index.html
@@ -41,11 +41,11 @@
         </div>
     </div>
     
-<footer style="margin-top:;">
+<!--  <footer style="margin-top:;">
         <div class="end">
            <p style="text-align:center;font-family: 'Poppins';">Powered & Designed by <a href="https://aime-blog.netlify.app/" style="color:blue;">SHYAKA Aime</a></p>
         </div>
-    </footer>
+    </footer>-->
 
     <script src="/static/index.js"></script>
 </body>
